# yolo_asv_ros_autonomous_control

./: .gitignore  a.out  readme.MD  try_syntax.cpp
data/: trial2.csv  trial2.csvlocal  trial3.csv  trial3.csvlocal
src/asv_auto_control/: CMakeLists.txt  package.xml
src/asv_auto_control/config/: frames.yaml
src/asv_auto_control/include/: Control.h  MainWindow.h  MissionWrapper.h  SensorControl.h  app.h  imgreceiver.h  utils.hpp
src/asv_auto_control/include/misi/: FindKorban.h  misi.h
src/asv_auto_control/include/sub_control/: CameraControl.h  ObstacleAvoidanceControl.h  WaypointControl.h
src/asv_auto_control/include/utils_class/: PIDController.h
src/asv_auto_control/include/widget/: imagelabel.h
src/asv_auto_control/launch/: bag_rescuer.launch  components.launch  rescuer.launch
src/asv_auto_control/src/: App.cpp  Control.cpp  MainWindow.cpp  MissionWrapper.cpp  SensorControl.cpp  main.cpp
src/asv_auto_control/src/misi/: FindKorban.cpp  Misi.cpp
src/asv_auto_control/src/sub_control/: CameraControl.cpp  ObstacleAvoidanceControl.cpp  WaypointControl.cpp
src/asv_auto_control/src/utils_class/: PIDController.cpp
src/asv_auto_control/ui/: mainwindow.ui
src/asv_control/: CMakeLists.txt  package.xml
src/asv_control/include/: MissionWrapper.h  app.h  utils.hpp
src/asv_control/include/sub_control/: WaypointControl.h
src/asv_control/launch/: components.launch  rescuer.launch
src/asv_control/src/: MainWindow.cpp  MissionWrapper.cpp  imgreceiver.cpp
src/asv_control/src/misi/: Misi.cpp
src/asv_control/src/sub_control/: WaypointControl.cpp
src/asv_control/src/widget/: imagelabel.cpp
src/asv_tf/: CMakeLists.txt  package.xml
src/asv_tf/include/: asv.h
src/asv_tf/launch/: start_asv_tf.launch
src/asv_tf/rviz/: rviz.rviz  rviz_new.rviz
src/asv_tf/src/: asv.cpp  main.cpp
src/asv_yolo_description/: CMakeLists.txt  package.xml
src/asv_yolo_description/models/yolo_asv_base/mesh/: Hull.STL  Hull_old.STL
src/asv_yolo_description/urdf/: asv_yolo.urdf
src/comm_stm/: CMakeLists.txt  compile_commands.json  package.xml
src/comm_stm/include/comm_stm/: connection.h  connectionardu.h  connectiontty.h  connectionudp.h  serialconnection.h
src/comm_stm/launch/: comm_tty.launch  comm_udp.launch
src/comm_stm/msg/: drive_system.msg  stm_status.msg
src/comm_stm/src/: connection.cpp  connectionardu.cpp  connectiontty.cpp  connectionudp.cpp  main.cpp  serialconnection.cpp
src/data_recoder/: cam_raw_to_avi.py  edgar_5_1.csv  edgar_7_1.csv  wp_error_to_csv.py  wp_zidan_1.csv  zidan_1.csv  zidan_1_2.csv  zidan_1_3.csv
src/map_image/: CMakeLists.txt  package.xml
src/map_image/resource/: format_file_location.txt  map_danau8.txt  map_wrx.txt  peta_riset.txt  rektorat.txt  riset_rektor.txt  robotika.txt  robotika_lama.txt  robotika_luas-lidar.txt  robotika_luas.txt  taman_alumni-lidar.txt  taman_alumni.txt  wp_peta_riset.json
src/map_image/src/: map_node.cpp
src/rviz_plugin/: CMakeLists.txt  CMakeLists2.txt  CMakeLists3.txt  default_setting.json  package.xml  plugin_description.xml
src/rviz_plugin/include/: ManualControl.h  asvCommunication.h  camera_plugin.h  carCommunication.h  drive_widget.h  imagelabel.h  imgreceiver.h  korbanLog.h  mission_plugin.h  pid_plugin.h  pixhawkSensor.h  waypoint_nav_frame.h  waypoint_nav_tool.h
src/rviz_plugin/launch/: default.rviz  waypoint_nav_plugin.rviz
src/rviz_plugin/msg/: ManualCtrl.msg  NextDest.msg  Pid.msg  Selectedwp.msg  userCmd.msg
src/rviz_plugin/setting/: default_setting.json
src/rviz_plugin/src/: ManualControl.cpp  asvCommunication.cpp  camera_plugin.cpp  carCommunication.cpp  drive_widget.cpp  imagelabel.cpp  imgreceiver.cpp  korbanLog.cpp  mission_plugin.cpp  pid_plugin.cpp  pixhawkSensor.cpp  waypoint_nav_frame.cpp  waypoint_nav_tool.cpp
src/rviz_plugin/ui/: WaypointNavigation.ui  asv_communication.ui  camera.ui  camera22.ui  camera_resp.ui  car_communication.ui  korbanLog.ui  mission.ui  pid.ui  pixhawkSensor.ui  user_interface.ui
src/simulation_translator/: CMakeLists.txt  package.xml
src/simulation_translator/include/simulation_translator/: GpsSensor.h
src/simulation_translator/src/: GpsSensor.cpp  main.cpp
src/tensorrt_demos/: ___trt_yolo_ros.py  record_cam.py  save_video.py  trt_ros_img.py  trt_yolo.py  trt_yolo_ros_.py  trt_yolo_ros_zdn.py  trt_yolo_rosbag.py
src/tensorrt_demos/utils/: camera.py  image_sender.py  yolo_classes.py
src/tensorrt_demos/yolo/: 2022-06-01-155130.webm  arya.cfg  asdf.cfg  tmp.cfg
