<package format="2">
  <name>asv_yolo_description</name>
  <version>0.0.1</version>
  <description>
  Provides a URDF for ASV
  </description>
  <maintainer email="barunastra@its.ac.id">barunastra</maintainer>
  <license>APACHE 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
</package>
